--- a/resources/assets/sass/_submission.sass
+++ b/resources/assets/sass/_submission.sass
@@ -57,7 +57,7 @@ div.submission-vue
         .card-footer
             background-color: white
         .fade-enter-active, .fade-leave-active
-            transition: opacity .5s
+            transition: opacity .3s
         .fade-enter, .fade-leave-to
             opacity: 0
 
